# python-project-lvl2

./: .gitignore  Makefile  README.md  gendiff.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  wemake
gendiff/: __init__.py  cli.py  common_components.py  gendiff.py  make_diff.py  parser.py  test.py
gendiff/formatters/: formats.py  json.py  plain.py  stylish.py
gendiff/scripts/: cli.py
tests/: test_generate_diff.py
tests/fixtures/: correct_json_output.txt  correct_output.txt
