[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nikolay Ulanov <iamnickolasulanov@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
pytest-cov = "^2.12.1"
PyYAML = "^5.4.1"
pytest = "^6.2.4"
mypy = "^0.902"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
